--- a/fridgehax/styles.css
+++ b/fridgehax/styles.css
@@ -4,7 +4,7 @@
 }
 
 html {
-    background: url(../images/background.jpg) no-repeat center center fixed;
+    background: url(https://github.com/microCardtm/microcardtm.github.io/raw/master/fridgehax/background.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
